--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 
     <!--====== MAIN CSS =====-->
-    <link  type="text/css" rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <title>VirosMs</title>
 </head>
