--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <aside class="sidebar" id="sidebar">
         <nav class="nav">
             <div class="nav__logo">
-                <a href="index.html" class="nav__logo-text">M</a>
+                <a href="index.html" class="nav__logo-text">V</a>
             </div>
 
             <div class="nav__menu">
@@ -69,6 +69,13 @@
                             <i class="uil uil-instagram"></i>
                         </a>
                     </div>
+                </div>
+                <img src="assets/img/home-img.png" alt="" class="home__img">
+
+                <div class="home__data">
+                    <h1 class="home__title">Hi, I'am Charles</h1>
+                    <h3 class="home__subtitle">Multiplataform Developer</h3>
+                    <p class="home__description"></p>
                 </div>
             </div>
         </section>
