--- a/index.html
+++ b/index.html
@@ -75,7 +75,41 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi, I'am Charles</h1>
                     <h3 class="home__subtitle">Multiplataform Developer</h3>
-                    <p class="home__description"></p>
+                    <p class="home__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                        Atque voluptates expedita quisquam tempore esse labore modi deleniti, vitae consectetur officia adipisci, 
+                        eveniet fuga deserunt beatae ipsum quae dignissimos impedit nihil.</p>
+                        <a href="#about" class="button"><i class="uil uil-user button__icon"></i>
+                        More About Me
+                        </a>
+                </div>
+
+                <div class="my__info">
+                    <div class="info__item">
+                        <i class="uil uil-whatsapp info__icon"></i>
+
+                        <div>
+                            <h3 class="info__title">Whatsapp</h3>
+                            <span class="info__subtitle"><a href="https://wa.link/6u4obg" class="info__link">Send mensage</a></span>
+                        </div>
+                    </div>
+
+                    <div class="info__item">
+                        <i class="uil uil-telegram-alt info__icon"></i>
+
+                        <div>
+                            <h3 class="info__title">Telegram</h3>
+                            <span class="info__subtitle">@cviro</span>
+                        </div>
+                    </div>
+
+                    <div class="info__item">
+                        <i class="uil uil-envelope-edit info__icon"></i>
+
+                        <div>
+                            <h3 class="info__title">Email</h3>
+                            <span class="info__subtitle">charlesms092@outlook.com</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
