Home section Finalized
Hay que cambiar el home-bg.jpg
la foto se ve mal

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                 <div class="home__data">
                     <h1 class="home__title">Hi, I'am Charles</h1>
-                    <h3 class="home__subtitle">Multiplataform Developer</h3>
+                    <h3 class="home__subtitle">Software Developer</h3>
                     <p class="home__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                         Atque voluptates expedita quisquam tempore esse labore modi deleniti, vitae consectetur officia adipisci, 
                         eveniet fuga deserunt beatae ipsum quae dignissimos impedit nihil.</p>
@@ -85,30 +85,36 @@
 
                 <div class="my__info">
                     <div class="info__item">
-                        <i class="uil uil-whatsapp info__icon"></i>
+                        <a href="https://wa.link/6u4obg" class="info__link info__item" target="_blank">
+                            <i class="uil uil-whatsapp info__icon"></i>
 
-                        <div>
-                            <h3 class="info__title">Whatsapp</h3>
-                            <span class="info__subtitle"><a href="https://wa.link/6u4obg" class="info__link">Send mensage</a></span>
-                        </div>
+                            <div>
+                                <h3 class="info__title">Whatsapp</h3>
+                                <span class="info__subtitle">+(34) 655-378-918</span>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="info__item">
-                        <i class="uil uil-telegram-alt info__icon"></i>
+                        <a href="https://t.me/cviro" class="info__link info__item" target="_blank">
+                            <i class="uil uil-telegram-alt info__icon"></i>
 
-                        <div>
-                            <h3 class="info__title">Telegram</h3>
-                            <span class="info__subtitle">@cviro</span>
-                        </div>
+                            <div>
+                                <h3 class="info__title">Telegram</h3>
+                                <span class="info__subtitle">@cviro</span>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="info__item">
-                        <i class="uil uil-envelope-edit info__icon"></i>
+                        <a href="mailto:charlesms092@outlook.com" class="info__link info__item" target="_blank">
+                            <i class="uil uil-envelope-edit info__icon"></i>
 
-                        <div>
-                            <h3 class="info__title">Email</h3>
-                            <span class="info__subtitle">charlesms092@outlook.com</span>
-                        </div>
+                            <div>
+                                <h3 class="info__title">Email</h3>
+                                <span class="info__subtitle">charlesms092@outlook.com</span>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
