About me section finalized
Hay que polir

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <img src="assets/img/home-img.png" alt="" class="home__img">
 
                 <div class="home__data">
-                    <h1 class="home__title">Hi, I'am Charles</h1>
+                    <h1 class="home__title">Hi, I'm Charles</h1>
                     <h3 class="home__subtitle">Software Developer</h3>
                     <p class="home__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                         Atque voluptates expedita quisquam tempore esse labore modi deleniti, vitae consectetur officia adipisci, 
@@ -119,6 +119,48 @@
                 </div>
             </div>
         </section>
+
+        <!--====== ABOUT ======-->
+        <section class="about section" id="about">
+            <h2 data-heading="My Intro" class="section__title">About me</h2>
+
+            <div class="about__container container grid">
+                <img src="assets/img/about-img.jpg" alt="" class="about__img">
+
+                <div class="about__data">
+                    <h3 class="about__heading">Hi, I'm Charles Arruda Santos, Based in Spain</h3>
+                    <p class="about__description">Passionate about technology and learning, I am a software developer currently studying to become a professional. 
+                        I have experience in a variety of languages and platforms, 
+                        including advanced Java, SQL, basic Python, basic JavaScript, HTML, CSS, and normal Git. I am also learning Spring Boot, a Java application development framework.
+                        I am a creative and methodical problem solver who enjoys working on challenging projects. I am motivated to learn new things and always looking for ways to improve my skills. </p>
+
+                    <div class="about__info grid">
+                        <div class="about__box">
+                            <i class="uil uil-award about__icon"></i>
+                            <h3 class="about__title">Experience</h3>
+                            <span class="about__subtitle">1 year</span>
+                        </div>
+                    
+                        <div class="about__box">
+                            <i class="uil uil-suitcase-alt about__icon"></i>
+                            <h3 class="about__title">Completed</h3>
+                            <span class="about__subtitle">Some projects</span>
+                        </div>
+                    
+                        <div class="about__box">
+                            <i class="uil uil-headphones-alt about__icon"></i>
+                            <h3 class="about__title">Support</h3>
+                            <span class="about__subtitle">Online 24/7</span>
+                        </div>
+                    </div>
+                    <a href="#contact" class="button"><i class="uil uil-navigator button__icon"></i>
+                    Contact Me
+                    </a>
+                </div>
+            </div>
+        </section>
+
+
 
     </main>
 
