--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </div>
                 <div class="line-footer borde">
                     <p><i class="bi bi-envelope-fill"></i> <a
-                            href="mailto:contacto@virosms.com">contacto@virosms.com</a></p>
+                            href="mailto:contact@virosms.com">contact@virosms.com</a></p>
                 </div>
             </div>
         </footer>
