Añadido soporte para modo oscuro y actualizado esquema de colores en CSS. Incluidas nuevas imágenes SVG para el icono de sol y luna.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                     </ul>
                 </nav>
 
+                <button onclick="toggleDarkMode()">🌗 Cambiar Modo</button>
+
+
                 <div class="btn-contact">
                     <a href="#contact">
                         <button>Contacto</button>
@@ -218,12 +221,14 @@
                     </div>
                 </div>
                 <div class="line-footer borde">
-                    <p><i class="bi bi-envelope-fill"></i> <a
-                            href="mailto:contact@virosms.com">contact@virosms.com</a></p>
+                    <p><i class="bi bi-envelope-fill"></i> <a href="mailto:contact@virosms.com">contact@virosms.com</a>
+                    </p>
                 </div>
             </div>
         </footer>
     </main>
+
+    <script src="js/scripts.js"></script>
 
 </body>
 
