Actualizado el cambio de imagen del logo según el modo de tema (claro/oscuro) en el archivo HTML y JavaScript.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="interface">
                 <div class="logo">
                     <a href="#">
-                        <img src="images/1-dark.png" alt="VirosMs">
+                        <img src="images/2-light.png" alt="VirosMs">
                     </a>
                 </div>
 
