Actualizado el logo en el pie de página para que cambie según el modo de tema (claro/oscuro) en HTML y JavaScript.

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <div class="flex">
                         <div class="logo-footer">
                             <a href="#">
-                                <img src="images/1-dark.png" alt="VirosMs">
+                                <img src="images/2-light.png" alt="VirosMs">
                             </a>
                         </div>
                         <div class="btn-social">
