Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
                 <div class="flex">
                     <div class="about-img">
-                        <img src="images/about-me.jpg" alt="">
+                        <img src="images/about-me.png" alt="">
                     </div>
                     <div class="about-txt">
                         <h2>¡Mucho Gusto! <span>Soy Charles Arruda Santos.</span></h2>
@@ -221,10 +221,7 @@
                         </p>
                         <p>Si estás interesado en trabajar juntos, no dudes en contactarme. ¡Estoy ansioso por conocer
                             tu proyecto y ayudarte a alcanzar tus objetivos!</p>
-                        <div class="btn-social">
-                            <a href="#"><button><i class="bi bi-github"></i></button></a>
-                            <a href="#"><button><i class="bi bi-linkedin"></i></button></a>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -234,12 +231,12 @@
             <div class="interface">
                 <h2 class="title">MIS <SPAN>PROYECTOS.</SPAN></h2>
                 <div class="flex">
-                    <div class="img-port" style="background-image: url(images/about-me.jpg);">
+                    <div class="img-port" style="background-image: url(images/restaurantChallenge.png);">
                         <div class="overlay">
-                            Projeto 1
+                            Sistema de Reservas
                         </div>
                     </div>
-                    <div class="img-port" style="background-image: url(images/about-me.jpg);">
+                   <!-- <div class="img-port" style="background-image: url(images/about-me.jpg);">
                         <div class="overlay">
                             Projeto 2
                         </div>
@@ -249,7 +246,7 @@
                         <div class="overlay">
                             Projeto 3
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </section>
@@ -258,12 +255,12 @@
             <div class="interface">
                 <h2 class="title">HABLA <span>COMINGO.</span></h2>
                 <form action="">
-                    <input type="text" name="" id="" placeholder="Nombre completo:" required>
+                    <!--<input type="text" name="" id="" placeholder="Nombre completo:" required>
                     <input type="text" name="" id="" placeholder="Email:" required>
                     <input type="text" name="" id="" placeholder="Telefono:">
-                    <textarea name="" id="" placeholder="Escribe tu mensaje:" required></textarea>
+                    <textarea name="" id="" placeholder="Escribe tu mensaje:" required></textarea>-->
                     <div class="btn-send">
-                        <input type="submit" value="ENVIAR">
+                        <input type="submit" value="ENVIAR CORREO">
                     </div>
                 </form>
             </div>
@@ -279,8 +276,8 @@
                             </a>
                         </div>
                         <div class="btn-social">
-                            <a href="#"><button><i class="bi bi-github"></i></button></a>
-                            <a href="#"><button><i class="bi bi-linkedin"></i></button></a>
+                            <a href="https://github.com/VirosMs"><button><i class="bi bi-github"></i></button></a>
+                            <a href="https://www.linkedin.com/in/charlesarrudasantos-vms092"><button><i class="bi bi-linkedin"></i></button></a>
                         </div>
                     </div>
                 </div>
