feat(config): Integra Tailwind CSS al proyecto
Añade dependencias de desarrollo, archivos de configuración y actualiza el HTML principal para soportar Tailwind CSS.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>virosms</title>
   </head>
-  <body>
+  <body class="bg-nyanza dark:bg-dark-green bg-radial-light dark:bg-radial-dark bg-[length:20px_20px] dark:bg-[length:25px_25px] text-dark-green dark:text-nyanza transition-colors duration-500 ease-in-out">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
